--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
  <head>
    <title>Nikson69</title>
+   <link href="style.css" rel="stylesheet">
+   <meta charset="utf-8">
  </head>
  <body>
-  <div id="app"></div>
+  <div id="app">
+    <div class="app-loader-container">
+      <img class="loader-img" src="./src/images/Nikson69Logo.png"/>
+      <div class="loader-dist">Loading...</div>
+    </div>
+  </div>
   <script src="./dist/main.js"></script>
  </body>
 </html>
